// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Location Item Card Renders Location Item Card with mock Aisle data 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "marginHorizontal": 0,
      "marginVertical": 1,
      "opacity": 1,
      "padding": 14,
    }
  }
  testID="btnCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 8,
        }
      }
    >
      <Text>
        Aisle G1
      </Text>
      <View>
        <Text
          style={
            Object {
              "color": "#9e9e9e",
              "fontSize": 12,
            }
          }
        >
          10 Sections
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#1977d3"
        name="chevron-right"
        size={20}
      />
    </View>
  </View>
</View>
`;

exports[`Test Location Item Card Renders Location Item Card with mock Section data 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "marginHorizontal": 0,
      "marginVertical": 1,
      "opacity": 1,
      "padding": 14,
    }
  }
  testID="btnCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 8,
        }
      }
    >
      <Text>
        Section G1-1
      </Text>
      <View>
        <Text
          style={
            Object {
              "color": "#9e9e9e",
              "fontSize": 12,
            }
          }
        >
          2 Items, 4 Pallets
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#1977d3"
        name="chevron-right"
        size={20}
      />
    </View>
  </View>
</View>
`;

exports[`Test Location Item Card Renders Location Item Card with mock Zone data with card button disabled 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "marginHorizontal": 0,
      "marginVertical": 1,
      "opacity": 1,
      "padding": 14,
    }
  }
  testID="btnCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 8,
        }
      }
    >
      <Text>
        G - Grocery
      </Text>
      <View>
        <Text
          style={
            Object {
              "color": "#9e9e9e",
              "fontSize": 12,
            }
          }
        >
          4 Aisles
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#1977d3"
        name="chevron-right"
        size={20}
      />
    </View>
  </View>
</View>
`;

exports[`Test Location Item Card Renders Location Item Card with mock Zone data with card click 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "marginHorizontal": 0,
      "marginVertical": 1,
      "opacity": 1,
      "padding": 14,
    }
  }
  testID="btnCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 8,
        }
      }
    >
      <Text>
        G - Grocery
      </Text>
      <View>
        <Text
          style={
            Object {
              "color": "#9e9e9e",
              "fontSize": 12,
            }
          }
        >
          4 Aisles
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#1977d3"
        name="chevron-right"
        size={20}
      />
    </View>
  </View>
</View>
`;
